--- a/v1.0/DVLD_v1.0/DVLD_v1.0.csproj
+++ b/v1.0/DVLD_v1.0/DVLD_v1.0.csproj
@@ -154,6 +154,12 @@
     <Compile Include="frmScheduleVisionTest.Designer.cs">
       <DependentUpon>frmScheduleVisionTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTakeTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTakeTest.Designer.cs">
+      <DependentUpon>frmTakeTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmUpdateApplicationType.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -233,6 +239,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmScheduleVisionTest.resx">
       <DependentUpon>frmScheduleVisionTest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTakeTest.resx">
+      <DependentUpon>frmTakeTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmUpdateApplicationType.resx">
       <DependentUpon>frmUpdateApplicationType.cs</DependentUpon>
