--- a/v1.0/DVLD_v1.0/DVLD_v1.0.csproj
+++ b/v1.0/DVLD_v1.0/DVLD_v1.0.csproj
@@ -184,6 +184,12 @@
     <Compile Include="frmVisionTestAppointment.Designer.cs">
       <DependentUpon>frmVisionTestAppointment.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTestsAppointment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTestsAppointment.Designer.cs">
+      <DependentUpon>frmTestsAppointment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ctrlLDLApplicationInfoCard.resx">
@@ -254,6 +260,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmVisionTestAppointment.resx">
       <DependentUpon>frmVisionTestAppointment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTestsAppointment.resx">
+      <DependentUpon>frmTestsAppointment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
