--- a/v1.0/DVLD_v1.0/DVLD_v1.0.csproj
+++ b/v1.0/DVLD_v1.0/DVLD_v1.0.csproj
@@ -148,11 +148,11 @@
     <Compile Include="frmPersonDetails.Designer.cs">
       <DependentUpon>frmPersonDetails.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmScheduleVisionTest.cs">
+    <Compile Include="frmScheduleTests.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmScheduleVisionTest.Designer.cs">
-      <DependentUpon>frmScheduleVisionTest.cs</DependentUpon>
+    <Compile Include="frmScheduleTests.Designer.cs">
+      <DependentUpon>frmScheduleTests.cs</DependentUpon>
     </Compile>
     <Compile Include="frmTakeTest.cs">
       <SubType>Form</SubType>
@@ -177,12 +177,6 @@
     </Compile>
     <Compile Include="frmUserDetails.Designer.cs">
       <DependentUpon>frmUserDetails.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmVisionTestAppointment.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmVisionTestAppointment.Designer.cs">
-      <DependentUpon>frmVisionTestAppointment.cs</DependentUpon>
     </Compile>
     <Compile Include="frmTestsAppointment.cs">
       <SubType>Form</SubType>
@@ -243,8 +237,8 @@
     <EmbeddedResource Include="frmPersonDetails.resx">
       <DependentUpon>frmPersonDetails.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmScheduleVisionTest.resx">
-      <DependentUpon>frmScheduleVisionTest.cs</DependentUpon>
+    <EmbeddedResource Include="frmScheduleTests.resx">
+      <DependentUpon>frmScheduleTests.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTakeTest.resx">
       <DependentUpon>frmTakeTest.cs</DependentUpon>
@@ -257,9 +251,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmUserDetails.resx">
       <DependentUpon>frmUserDetails.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmVisionTestAppointment.resx">
-      <DependentUpon>frmVisionTestAppointment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTestsAppointment.resx">
       <DependentUpon>frmTestsAppointment.cs</DependentUpon>
