--- a/v1.0/DVLD-DataAccessLayer/DVLD-DataAccessLayer.csproj
+++ b/v1.0/DVLD-DataAccessLayer/DVLD-DataAccessLayer.csproj
@@ -45,7 +45,9 @@
     <Compile Include="clsCountryData.cs" />
     <Compile Include="clsDataAccessSettings.cs" />
     <Compile Include="clsApplicationData.cs" />
+    <Compile Include="clsDriversData.cs" />
     <Compile Include="clsLicenseClassesData.cs" />
+    <Compile Include="clsLicenseData.cs" />
     <Compile Include="clsLocalDLApplicationData.cs" />
     <Compile Include="clsPersonData.cs" />
     <Compile Include="clsTestAppointmentData.cs" />
