--- a/v1.0/DVLD_v1.0/DVLD_v1.0.csproj
+++ b/v1.0/DVLD_v1.0/DVLD_v1.0.csproj
@@ -52,6 +52,12 @@
     <Compile Include="ctrlLDLApplicationInfoCard.Designer.cs">
       <DependentUpon>ctrlLDLApplicationInfoCard.cs</DependentUpon>
     </Compile>
+    <Compile Include="ctrlLicenseCard.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ctrlLicenseCard.Designer.cs">
+      <DependentUpon>ctrlLicenseCard.cs</DependentUpon>
+    </Compile>
     <Compile Include="ctrlPersonCard.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -105,6 +111,12 @@
     </Compile>
     <Compile Include="frmLDLApplcationDetails.Designer.cs">
       <DependentUpon>frmLDLApplcationDetails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmLicenseDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLicenseDetails.Designer.cs">
+      <DependentUpon>frmLicenseDetails.cs</DependentUpon>
     </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
@@ -195,6 +207,9 @@
     <EmbeddedResource Include="ctrlLDLApplicationInfoCard.resx">
       <DependentUpon>ctrlLDLApplicationInfoCard.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ctrlLicenseCard.resx">
+      <DependentUpon>ctrlLicenseCard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ctrlPersonCard.resx">
       <DependentUpon>ctrlPersonCard.cs</DependentUpon>
     </EmbeddedResource>
@@ -221,6 +236,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmLDLApplcationDetails.resx">
       <DependentUpon>frmLDLApplcationDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmLicenseDetails.resx">
+      <DependentUpon>frmLicenseDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
