--- a/v1.0/DVLD-BusinessLayer/DVLD-BusinessLayer.csproj
+++ b/v1.0/DVLD-BusinessLayer/DVLD-BusinessLayer.csproj
@@ -46,6 +46,7 @@
     <Compile Include="clsDriver.cs" />
     <Compile Include="clsGlobalSettings.cs" />
     <Compile Include="clsApplication.cs" />
+    <Compile Include="clsInternationalLicense.cs" />
     <Compile Include="clsLicense.cs" />
     <Compile Include="clsLicenseClass.cs" />
     <Compile Include="clsLocalDLApplication.cs" />
