Design frmManageDetainedLicenses and Create BL and DAL for Detained License

--- a/v1.0/DVLD_v1.0/DVLD_v1.0.csproj
+++ b/v1.0/DVLD_v1.0/DVLD_v1.0.csproj
@@ -548,5 +548,11 @@
   <ItemGroup>
     <None Include="Resources\yes-or-no.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\evaluation.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\slave.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
