initilize detained license form

--- a/v1.0/DVLD-BusinessLayer/DVLD-BusinessLayer.csproj
+++ b/v1.0/DVLD-BusinessLayer/DVLD-BusinessLayer.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="clsApplicationType.cs" />
     <Compile Include="clsCountry.cs" />
+    <Compile Include="clsDetainedLicense.cs" />
     <Compile Include="clsDriver.cs" />
     <Compile Include="clsGlobalSettings.cs" />
     <Compile Include="clsApplication.cs" />
