--- a/v1.0/DVLD-DataAccessLayer/DVLD-DataAccessLayer.csproj
+++ b/v1.0/DVLD-DataAccessLayer/DVLD-DataAccessLayer.csproj
@@ -45,6 +45,7 @@
     <Compile Include="clsCountryData.cs" />
     <Compile Include="clsDataAccessSettings.cs" />
     <Compile Include="clsApplicationData.cs" />
+    <Compile Include="clsDetainedLicenseData.cs" />
     <Compile Include="clsDriversData.cs" />
     <Compile Include="clsInternationalLicenseData.cs" />
     <Compile Include="clsLicenseClassesData.cs" />
