--- a/DVLD-BusinessLogicLayer/DVLD-BusinessLogicLayer.csproj
+++ b/DVLD-BusinessLogicLayer/DVLD-BusinessLogicLayer.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsGlobalSettings.cs" />
+    <Compile Include="clsPerson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
