--- a/DVLD-DataAccessLayer/DVLD-DataAccessLayer.csproj
+++ b/DVLD-DataAccessLayer/DVLD-DataAccessLayer.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsDataAccessSettings.cs" />
+    <Compile Include="clsPersonData.cs" />
+    <Compile Include="clsUserData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
