--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -218,5 +218,14 @@
   <ItemGroup>
     <None Include="Resources\add.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\default-female.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\default-male.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\edit.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
