--- a/DVLD-BusinessLogicLayer/DVLD-BusinessLogicLayer.csproj
+++ b/DVLD-BusinessLogicLayer/DVLD-BusinessLogicLayer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="clsApplication.cs" />
     <Compile Include="clsApplicationType.cs" />
     <Compile Include="clsCountry.cs" />
+    <Compile Include="clsLicenseClass.cs" />
     <Compile Include="clsTestType.cs" />
     <Compile Include="GlobalClasses\clsGlobalSettings.cs" />
     <Compile Include="clsPerson.cs" />
