--- a/DVLD-BusinessLogicLayer/DVLD-BusinessLogicLayer.csproj
+++ b/DVLD-BusinessLogicLayer/DVLD-BusinessLogicLayer.csproj
@@ -45,6 +45,7 @@
     <Compile Include="clsApplicationType.cs" />
     <Compile Include="clsCountry.cs" />
     <Compile Include="clsLicenseClass.cs" />
+    <Compile Include="clsLocalLicenseApplication.cs" />
     <Compile Include="clsTestType.cs" />
     <Compile Include="GlobalClasses\clsGlobalSettings.cs" />
     <Compile Include="clsPerson.cs" />
