--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -58,10 +58,10 @@
     <Compile Include="Application\ApplicationTypes\frmManageApplicationTypes.Designer.cs">
       <DependentUpon>frmManageApplicationTypes.cs</DependentUpon>
     </Compile>
-    <Compile Include="Application\frmAddEditLocalLicenseApplication.cs">
+    <Compile Include="Application\LocalLicenseApplication\frmAddEditLocalLicenseApplication.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Application\frmAddEditLocalLicenseApplication.Designer.cs">
+    <Compile Include="Application\LocalLicenseApplication\frmAddEditLocalLicenseApplication.Designer.cs">
       <DependentUpon>frmAddEditLocalLicenseApplication.cs</DependentUpon>
     </Compile>
     <Compile Include="frmMain.cs">
@@ -156,7 +156,7 @@
     <EmbeddedResource Include="Application\ApplicationTypes\frmManageApplicationTypes.resx">
       <DependentUpon>frmManageApplicationTypes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Application\frmAddEditLocalLicenseApplication.resx">
+    <EmbeddedResource Include="Application\LocalLicenseApplication\frmAddEditLocalLicenseApplication.resx">
       <DependentUpon>frmAddEditLocalLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
