--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -126,6 +126,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\ctrlScheduleTests.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tests\ctrlScheduleTests.Designer.cs">
+      <DependentUpon>ctrlScheduleTests.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tests\fffff.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tests\fffff.Designer.cs">
+      <DependentUpon>fffff.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tests\frmManageTestAppointments.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -229,6 +241,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Tests\ctrlScheduleTests.resx">
+      <DependentUpon>ctrlScheduleTests.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tests\frmManageTestAppointments.resx">
       <DependentUpon>frmManageTestAppointments.cs</DependentUpon>
     </EmbeddedResource>
