--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -126,34 +126,34 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\ctrlScheduleTests.cs">
+    <Compile Include="Test\ctrlScheduleTests.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Tests\ctrlScheduleTests.Designer.cs">
+    <Compile Include="Test\ctrlScheduleTests.Designer.cs">
       <DependentUpon>ctrlScheduleTests.cs</DependentUpon>
     </Compile>
-    <Compile Include="Tests\ctrlTakeTests.cs">
+    <Compile Include="Test\ctrlTakeTests.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Tests\ctrlTakeTests.Designer.cs">
+    <Compile Include="Test\ctrlTakeTests.Designer.cs">
       <DependentUpon>ctrlTakeTests.cs</DependentUpon>
     </Compile>
-    <Compile Include="Tests\frmManageTestAppointments.cs">
+    <Compile Include="Test\frmManageTestAppointments.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Tests\frmManageTestAppointments.Designer.cs">
+    <Compile Include="Test\frmManageTestAppointments.Designer.cs">
       <DependentUpon>frmManageTestAppointments.cs</DependentUpon>
     </Compile>
-    <Compile Include="Tests\frmScheduleTest.cs">
+    <Compile Include="Test\frmScheduleTest.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Tests\frmScheduleTest.Designer.cs">
+    <Compile Include="Test\frmScheduleTest.Designer.cs">
       <DependentUpon>frmScheduleTest.cs</DependentUpon>
     </Compile>
-    <Compile Include="Tests\frmTakeTest.cs">
+    <Compile Include="Test\frmTakeTest.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Tests\frmTakeTest.Designer.cs">
+    <Compile Include="Test\frmTakeTest.Designer.cs">
       <DependentUpon>frmTakeTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Test\TestTypes\frmEditTestType.cs">
@@ -247,19 +247,19 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Tests\ctrlScheduleTests.resx">
+    <EmbeddedResource Include="Test\ctrlScheduleTests.resx">
       <DependentUpon>ctrlScheduleTests.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Tests\ctrlTakeTests.resx">
+    <EmbeddedResource Include="Test\ctrlTakeTests.resx">
       <DependentUpon>ctrlTakeTests.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Tests\frmManageTestAppointments.resx">
+    <EmbeddedResource Include="Test\frmManageTestAppointments.resx">
       <DependentUpon>frmManageTestAppointments.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Tests\frmScheduleTest.resx">
+    <EmbeddedResource Include="Test\frmScheduleTest.resx">
       <DependentUpon>frmScheduleTest.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Tests\frmTakeTest.resx">
+    <EmbeddedResource Include="Test\frmTakeTest.resx">
       <DependentUpon>frmTakeTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Test\TestTypes\frmEditTestType.resx">
@@ -499,6 +499,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\proceed.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Tests\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
