--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -500,8 +500,6 @@
   <ItemGroup>
     <None Include="Resources\proceed.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Tests\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
