--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -100,6 +100,12 @@
     <Compile Include="License\Local-Licenses\frmIssueLocalLicense.Designer.cs">
       <DependentUpon>frmIssueLocalLicense.cs</DependentUpon>
     </Compile>
+    <Compile Include="License\Local-Licenses\frmLicenseDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="License\Local-Licenses\frmLicenseDetails.Designer.cs">
+      <DependentUpon>frmLicenseDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -236,6 +242,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="License\Local-Licenses\frmIssueLocalLicense.resx">
       <DependentUpon>frmIssueLocalLicense.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="License\Local-Licenses\frmLicenseDetails.resx">
+      <DependentUpon>frmLicenseDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
