--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -94,6 +94,12 @@
     <Compile Include="License\Local-Licenses\ctrlLicenseCard.Designer.cs">
       <DependentUpon>ctrlLicenseCard.cs</DependentUpon>
     </Compile>
+    <Compile Include="License\Local-Licenses\ctrlLicenseCardFinder.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="License\Local-Licenses\ctrlLicenseCardFinder.Designer.cs">
+      <DependentUpon>ctrlLicenseCardFinder.cs</DependentUpon>
+    </Compile>
     <Compile Include="License\Local-Licenses\frmIssueLocalLicense.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +111,12 @@
     </Compile>
     <Compile Include="License\Local-Licenses\frmLicenseDetails.Designer.cs">
       <DependentUpon>frmLicenseDetails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Application\frmRenewLicenseApplication.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Application\frmRenewLicenseApplication.Designer.cs">
+      <DependentUpon>frmRenewLicenseApplication.cs</DependentUpon>
     </Compile>
     <Compile Include="Login\frmLogin.cs">
       <SubType>Form</SubType>
@@ -240,11 +252,17 @@
     <EmbeddedResource Include="License\Local-Licenses\ctrlLicenseCard.resx">
       <DependentUpon>ctrlLicenseCard.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="License\Local-Licenses\ctrlLicenseCardFinder.resx">
+      <DependentUpon>ctrlLicenseCardFinder.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="License\Local-Licenses\frmIssueLocalLicense.resx">
       <DependentUpon>frmIssueLocalLicense.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="License\Local-Licenses\frmLicenseDetails.resx">
       <DependentUpon>frmLicenseDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Application\frmRenewLicenseApplication.resx">
+      <DependentUpon>frmRenewLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
