--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -100,6 +100,12 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="License\ctrlAllDriverLicenses.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="License\ctrlAllDriverLicenses.Designer.cs">
+      <DependentUpon>ctrlAllDriverLicenses.cs</DependentUpon>
+    </Compile>
     <Compile Include="License\Local-Licenses\ctrlLicenseCard.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -266,6 +272,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="License\ctrlAllDriverLicenses.resx">
+      <DependentUpon>ctrlAllDriverLicenses.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="License\Local-Licenses\ctrlLicenseCard.resx">
       <DependentUpon>ctrlLicenseCard.cs</DependentUpon>
