--- a/DVLD/DVLD.csproj
+++ b/DVLD/DVLD.csproj
@@ -106,6 +106,12 @@
     <Compile Include="License\ctrlAllDriverLicenses.Designer.cs">
       <DependentUpon>ctrlAllDriverLicenses.cs</DependentUpon>
     </Compile>
+    <Compile Include="License\frmLicensesHistory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="License\frmLicensesHistory.Designer.cs">
+      <DependentUpon>frmLicensesHistory.cs</DependentUpon>
+    </Compile>
     <Compile Include="License\Local-Licenses\ctrlLicenseCard.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -275,6 +281,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="License\ctrlAllDriverLicenses.resx">
       <DependentUpon>ctrlAllDriverLicenses.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="License\frmLicensesHistory.resx">
+      <DependentUpon>frmLicensesHistory.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="License\Local-Licenses\ctrlLicenseCard.resx">
       <DependentUpon>ctrlLicenseCard.cs</DependentUpon>
